# NekoDelivery

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Document/api/: auth.md  package.md
Document/database/: nekodelivery_packages.md  nekodelivery_session.md  nekodelivery_transaction.md  nekodelivery_user.md
Document/database/sql/: nekodelivery_user.sql
Document/project/: README.md
Source/: CMakeLists.txt
Source/auth/: CMakeLists.txt  NekoDeliveryAuth.cpp  NekoDeliveryAuth.h  main.cpp
Source/dao/: CMakeLists.txt
Source/dao/mysql/: CMakeLists.txt  MySQLBaseDao.cpp  MySQLBaseDao.h  MySQLConnectionPool.cpp  MySQLConnectionPool.h
Source/dao/session/: CMakeLists.txt  NekoDeliverySessionDao.h
Source/dao/session/impl/: CMakeLists.txt  NekoDeliverySessionDaoImpl.cpp  NekoDeliverySessionDaoImpl.h
Source/dao/session/table/: SessionProperties.h  SessionToken.h
Source/dao/user/: CMakeLists.txt  NekoDeliveryUserDao.h
Source/dao/user/impl/: CMakeLists.txt  NekoDeliveryUserDaoImpl.cpp  NekoDeliveryUserDaoImpl.h
Source/dao/user/table/: AccessCode.h  CMakeLists.txt  CouriersInfo.h  RecoverCode.h  UserAuth.h  UserDetail.h
Source/example/: CMakeLists.txt
Source/session/: CMakeLists.txt  NekoDeliverySession.cpp  NekoDeliverySession.h  SessionException.hpp
Test/: CMakeLists.txt  test.cpp
Test/dao/: CMakeLists.txt  test_main.cpp
Test/dao/mysql/: MySQLBaseDaoTest.hpp  MySQLConnectionPool.hpp
Test/dao/user/: NekoDeliveryUserDaoImpl.hpp
doc/database/: nekodelivery_user.md
src/: CMakeSettings.json  example.cpp
src/example/conf/: setting.conf
